project/media/styles/myitems.css
dl.user-info {
  margin-bottom: 0;
  padding-bottom: 10px;
  font-size: 14px;
}

dl.user-info dt {
  float: left;
  clear: left;
  margin-right: 5px;
  color: #1F555F;
  font-weight: bold;
}

.myitems a.add,
.myitems a.delete {
  display: inline-block;
  color: #707070;
  font-weight: bolder;
  line-height: 12px;
  font-size: 20px;
  height: 12px;
  overflow: hidden;
}


.myitems .portlet.my-items-views ul {
  margin: 0 3px 0 0;
  padding: 0;
  list-style-type: none;
  font-size: 14px;
}

.portlet.my-items-views li {
  padding: 2px 0 2px 3px;
}

.portlet.my-items-views li.selected {
  font-weight: bold;
  background-color: #D5D5FF;
}

.portlet.my-items-views li.selected a {
  color: #1F4D64;
}

.portlet.my-items-views a {
  color: #707070;
  text-decoration: none;
}


.myitems .portlet h1 {
  color: #FFFFFF;
  background-color: #1F4D64;
  border-top-left-radius: 6px 6px;
  border-top-right-radius: 6px 6px;
  padding: 2px 6px 0 6px;
  font-weight: bold;
}


.myitems .saved-searches {
  text-decoration: none;
  font-size: 1.1em;
  margin-top: 20px;
}


.materials-index.saved .index-navigation.top {
  margin-bottom: 5px;
  background: none;
}

.materials-index.saved p.hint {
  margin-bottom: 15px;
  padding-bottom: 10px;
  line-height: 14px;
  font-weight: bold;
  font-size: 14px;
}

.materials-index.saved p.hint img {
  vertical-align: top;
}

.materials-index.saved.searches p.hint {
  margin-top: 10px;
}

.unsave-confirmation {
  display: none;
}

#folder-create-button, #folder-create-submit {
  color: #1F4D64;
  font-style: italic;
}

section.my-items-views li {
  overflow: auto;
  width: 100%;
}

#folder-create-form input {
  display: none;
}


.myitems article .folder-list li {
  display: inline-block;
  list-style-type: none;
  margin-left: 5px;
  padding: 0px 4px;
  margin-top: 6px;
  border-top-right-radius: 2px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #85BDD4;
  color: #FFFFFF;
  border: solid;
  border-color: #85BDD4;
  border-width: 1px;
  line-height: 24px;
  height: 24px;
  vertical-align: bottom;
}

.myitems article .folder-list .folder-deco {
  vertical-align: top;
  display: inline-block;
  height: 2px;
  width: 10px;
  margin-top: -4px;
  margin-left: -5px;
  margin-right: -6px;
  background-color: #85BDD4;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border: solid;
  border-color: #85BDD4;
  border-width: 1px;
}


.myitems article .folder-list li.last, 
.myitems article .folder-list li.last .folder-deco {
  border: dashed;
  border-color: #85BDD4;
  border-width: 1px;
  background-color: #FFFFFF;
}

.myitems article .folder-list li.last .add {
  margin: 0 3px;
}

.myitems article .folder-list li.last .folder-deco {
  border-bottom-color: #FFFFFF;
  border-bottom-width: 2px;
}

.myitems article .folder-list li#folder-item-form {
  padding: 0;
  background: none;
  border: none;
}

.myitems article .widgets {
  margin-top: 5px;
}

.myitems article .widgets > li {
  display: inline-block;
  list-style-type: none;
  vertical-align: bottom;
  margin-left: 10px;
}

.myitems article .widgets li {
  margin-bottom: 0;
}

.myitems article {
  position: relative;
}

.myitems article div.delete {
  position: absolute;
  top: -2px;
  right: 2px;
}

.myitems article div.relation {
  margin-top: 20px;
}

.myitems .pics article .details {
  margin-left: 170px;
}

.myitems .left {
  float: left;
}


.myitems .action-panel {
  margin-top: 0;
  background: none;
  padding: 0;
}

.myitems .action-panel .view-selector {
  float: right;
  margin: 0;
}

.myitems .action-panel .view-selector li {
  margin-right: 5px;
}

.myitems .action-panel .view-selector li.last {
  margin-right: 0;
}

.myitems .action-panel li {
  background: none;
  padding: 0;
}

.myitems .action-panel ul.left {
  margin: 0;
}

.myitems .materials-index {
  margin-top: 10px;
}

.myitems .folder-icon {
  display: inline-block;
  width: 21px;
  height: 16px;
  background-repeat: no-repeat;
}

.myitems .my-items-views .view .folder-icon {
  background-image: url('/media/images/myitems-folder-auto.png');
}

.myitems .my-items-views .folder .folder-icon {
  background-image: url('/media/images/myitems-folder-user.png');
}

.myitems .my-items-views .last .folder-icon {
  background-image: url('/media/images/myitems-folder-new.png');
}

